# sqdqueue

./: .travis.yml  conanfile.py  meson.build  readme.md
.ci/: build.py
lib/: meson.build  queue.c  queue.h
test/: meson.build  test.c  test_runner.c
